--- a/.gitignore
+++ b/.gitignore
@@ -103,4 +103,12 @@ dist
 # TernJS port file
 .tern-port
 
+# OS generated files #
+######################
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
